Fix ARGF#lineno to return Integer as documented

[Bug #18753]